--- a/prueba-app/composer.json
+++ b/prueba-app/composer.json
@@ -11,7 +11,8 @@
         "kyslik/column-sortable": "^6.4",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
